2009-04-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* lib/t-pppalpha/slimpl.m4: Mark sync as clobbering the whole
	memory, so that any variable is forcibly re-read from memory after
	the sync. This prevents the compiler from caching the memory
	values in registers across a sync.

	* tests/0_minimal/3_mem/sideeffect.sl: Add test for this bug.

2009-04-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Make `slr' recognize variable definitions using command line
	argument of form "-dVAR" or "-dVAR=..." as recommended by
	C. Grelck. Update documentation. Minor bug fix in `slt'.

	* bin/slr.in: Handle command line differently. Document it.

	* demo/roman.sl,
	* demo/fibonacci.sl,
	* demo/fft.sl,
	* tests/1_basic/2_div/div.sl,
	* tests/1_basic/0_slr_args/args.sl: Update accordingly.	

	* bin/slt.in (check_status): Initialize $signal to 0 to avoid a
	bad integer expression in `test' later.

2009-04-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>
	Transitory fix requested by M. Hicks.
	
	* bin/spp (pppalpha.makespecial): Use "ldgp" if no gpdisp number
	is available.

2009-04-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Transitory fix requested by M. Hicks.
	
	* bin/spp (pppalpha.makespecial): For prologue detection,
	recognize a single "ldgp" macro as well instead of only 2
	instructions. This may allow to use GCC 4.1 as Alpha
	cross-compiler.

2009-04-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improvements to test engine and documentation. Minor cleanup.
	
	* bin/slt.in: Allow specifying implementation names via an
	environment variable. Provide (cleaner) mechanism to add extra
	args for compilation and execution. Properly handle runtime
	failure when a test code requires multiple test runs. Document the
	features.

	* bin/slt.in: Reorganize documentation sections so that the manual
	page looks nice.

	* configure.ac: Add new parameters --enable-check-utc and
	--disable-check-ppp that set Automake conditionals.
	
	* tests.mk: Based on conditionals set by configure, either ignore